--- a/packages/manager/modules/iam/src/components/actionSelect/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/iam/src/components/actionSelect/translations/Messages_fr_FR.json
@@ -1,7 +1,7 @@
 {
   "iam_action_select_action_custom_heading": "Actions ajoutées manuellement",
   "iam_action_select_action_search_label": "Rechercher une action",
-  "iam_action_select_all_actions_description": "Toutes les actions actuelles et futures sur tous les types de produits",
+  "iam_action_select_all_actions_description": "Toutes les actions existantes et à venir sur tous les types de produits seront autorisées",
   "iam_action_select_all_actions_label": "Autoriser toutes les actions",
   "iam_action_select_category_count_selection_many": "({{ selected }} actions sélectionnées / {{ total }})",
   "iam_action_select_category_count_selection_one": "(1 action sélectionnée / {{ total }})",
