--- a/packages/manager/modules/sign-up/src/form/details/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/sign-up/src/form/details/translations/Messages_fr_FR.json
@@ -10,5 +10,6 @@
   "sign_up_details_field_state": "État",
   "sign_up_details_field_province": "Province",
   "sign_up_details_field_mobile_phone": "Mobile",
-  "sign_up_details_field_landline_phone": "Fixe"
+  "sign_up_details_field_landline_phone": "Fixe",
+  "sign_up_details_field_sms_consent": "J'accepte de recevoir des SMS relatifs aux nouveautés et offres commerciales d'OVHcloud"
 }
