--- a/packages/manager/modules/sign-up/src/form/details/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/sign-up/src/form/details/translations/Messages_fr_FR.json
@@ -8,5 +8,7 @@
   "sign_up_details_field_address": "Adresse",
   "sign_up_details_field_area": "Région",
   "sign_up_details_field_state": "État",
-  "sign_up_details_field_province": "Province"
+  "sign_up_details_field_province": "Province",
+  "sign_up_details_field_mobile_phone": "Mobile",
+  "sign_up_details_field_landline_phone": "Fixe"
 }
