--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/users/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/users/translations/Messages_de_DE.json
@@ -15,5 +15,6 @@
   "pci_projects_project_storages_containers_users_import_success_message": "Die JSON-Datei für den Nutzer {{user}} wurde komplett heruntergeladen.",
   "pci_projects_project_storages_containers_users_import_error_message": "Beim Herunterladen der JSON-Datei für den Nutzer ist ein Fehler aufgetreten: {{ message }}.",
   "pci_projects_project_storages_containers_users_show_secret_key_success": "Der geheime Schlüssel des Nutzers {{user}} ist {{secret}}.",
-  "pci_projects_project_storages_containers_users_add_success_field_secret_key": "Ihr geheimer S3-Schlüssel:"
+  "pci_projects_project_storages_containers_users_add_success_field_secret_key": "Ihr geheimer S3-Schlüssel:",
+  "pci_projects_project_storages_containers_users_show_secret_key_error": "Beim Abrufen des geheimen Schlüssels des Nutzers {{ user }} ist ein Fehler aufgetreten: {{ message }}"
 }
