--- a/packages/manager/modules/pci/src/projects/project/storages/object-storage/users/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/object-storage/users/translations/Messages_en_GB.json
@@ -14,5 +14,6 @@
   "pci_projects_project_storages_containers_users_download_rclone_file": "Download rclone file",
   "pci_projects_project_storages_containers_users_see_secret_key": "View the secret key",
   "pci_projects_project_storages_containers_users_show_secret_key_success": "Your {{user}} user's secret key is {{secret}}.",
-  "pci_projects_project_storages_containers_users_add_success_field_secret_key": "Your S3 secret key:"
+  "pci_projects_project_storages_containers_users_add_success_field_secret_key": "Your S3 secret key:",
+  "pci_projects_project_storages_containers_users_show_secret_key_error": "An error has occurred retrieving the secret key for the user {{ user }} : {{ message }}"
 }
