--- a/packages/manager/modules/pci/src/projects/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/translations/Messages_de_DE.json
@@ -13,5 +13,6 @@
   "pci_projects_project_pay_bill": "Meine Rechnung begleichen",
   "pci_projects_project_view": "Projekt anzeigen",
   "pci_projects_create_project": "Neues Projekt erstellen",
-  "pci_projects_redirect_to_dedicated_page": "Bitte wählen Sie ein bereits bestehendes Projekt aus oder erstellen Sie ein neues, um fortzufahren."
+  "pci_projects_redirect_to_dedicated_page": "Bitte wählen Sie ein bereits bestehendes Projekt aus oder erstellen Sie ein neues, um fortzufahren.",
+  "pci_projects_status_deleted": "Gelöscht"
 }
