--- a/packages/manager/modules/pci/src/projects/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/translations/Messages_en_GB.json
@@ -13,5 +13,6 @@
   "pci_projects_create_project": "Create a new project",
   "pci_projects_project_delete": "Delete",
   "pci_projects_redirect_to_dedicated_page": "To continue, please select an existing project or create a new project.",
-  "pci_projects_project_delete_success": "You have been sent an email confirming the deletion."
+  "pci_projects_project_delete_success": "You have been sent an email confirming the deletion.",
+  "pci_projects_status_deleted": "Deleted"
 }
