--- a/packages/manager/modules/pci/src/projects/translations/Messages_fr_CA.json
+++ b/packages/manager/modules/pci/src/projects/translations/Messages_fr_CA.json
@@ -9,6 +9,7 @@
   "pci_projects_status_creating": "Création en cours",
   "pci_projects_status_suspended": "Suspendu",
   "pci_projects_status_pendingDebt": "Facture à payer",
+  "pci_projects_status_deleted": "Supprimé",
   "pci_projects_project_pay_bill": "Régler ma facture",
   "pci_projects_project_show": "Visualiser",
   "pci_projects_project_view": "Voir le projet",
