--- a/packages/manager/modules/pci/src/projects/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/translations/Messages_it_IT.json
@@ -13,5 +13,6 @@
   "pci_projects_create_project": "Crea un nuovo progetto",
   "pci_projects_project_delete": "Elimina",
   "pci_projects_redirect_to_dedicated_page": "Per continuare, seleziona un progetto esistente o creane uno nuovo.",
-  "pci_projects_project_delete_success": "Ti abbiamo inviato la conferma dell’eliminazione via email."
+  "pci_projects_project_delete_success": "Ti abbiamo inviato la conferma dell’eliminazione via email.",
+  "pci_projects_status_deleted": "Eliminato "
 }
