--- a/packages/manager/modules/pci/src/projects/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/translations/Messages_pl_PL.json
@@ -13,5 +13,6 @@
   "pci_projects_project_pay_bill": "Ureguluj należności",
   "pci_projects_project_view": "Wyświetl projekt",
   "pci_projects_create_project": "Utwórz nowy projekt",
-  "pci_projects_redirect_to_dedicated_page": "Aby kontynuować, wybierz istniejący projekt lub utwórz nowy."
+  "pci_projects_redirect_to_dedicated_page": "Aby kontynuować, wybierz istniejący projekt lub utwórz nowy.",
+  "pci_projects_status_deleted": "Usunięto"
 }
