--- a/packages/manager/modules/pci/src/projects/new/components/voucher/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/new/components/voucher/translations/Messages_pl_PL.json
@@ -13,5 +13,18 @@
   "pci_projects_new_voucher_title": "Masz kod promocyjny?",
   "pci_projects_new_voucher_form_field_placeholder": "Kod promocyjny",
   "pci_projects_new_voucher_form_field_add_success": "Gratulacje! Otrzymasz zasilenie w kwocie {{credit}}",
-  "pci_projects_new_voucher_form_field_error_too_many_attempt": "Wprowadziłeś błędne kody promocyjne. Spróbuj ponownie później."
+  "pci_projects_new_voucher_form_field_error_too_many_attempt": "Wprowadziłeś błędne kody promocyjne. Spróbuj ponownie później.",
+  "pci_projects_new_voucher_form_field_error_voucher_invalid": "Wpisany kod jest nieprawidłowy. Spróbuj ponownie później.",
+  "pci_projects_new_voucher_form_field_error_voucher_too_many_attempt": "Próbowałeś wpisać kod zbyt wiele razy. Poczekaj 1 godzinę zanim spróbujesz ponownie wpisać kod.",
+  "pci_projects_new_voucher_form_field_error_voucher_no_longer_valid": "Wprowadzony kod jest nieważny.",
+  "pci_projects_new_voucher_form_field_error_voucher_already_used": "Kod, który wprowadziłeś został już wykorzystany.",
+  "pci_projects_new_voucher_form_field_error_voucher_already_used_2": "Użyłeś już innego kodu, który nie jest kompatybilny z tym kodem.",
+  "pci_projects_new_voucher_form_field_error_voucher_expired": " Kod, który wprowadziłeś jest nieważny.",
+  "pci_projects_new_voucher_form_field_error_voucher_country": "Kod, który wprowadziłeś nie jest dostępny dla tego kraju.",
+  "pci_projects_new_voucher_form_field_error_voucher_payment_mean": " Aby móc skorzystać z tego kodu, wprowadź sposób płatności.",
+  "pci_projects_new_voucher_form_field_error_voucher_too_many_used": " Kod, który wprowadziłeś przekroczył liczbę razy, które może być użyty.",
+  "pci_projects_new_voucher_form_field_error_voucher_nichandle": "Podany przez Ciebie kod nie może zostać wykorzystany dla tego identyfikatora klienta.",
+  "pci_projects_new_voucher_form_field_error_voucher_scored": " Twoje konto nie jest uprawnione do korzystania z tego kodu.",
+  "pci_projects_new_voucher_form_field_error_voucher_new_customer": "Kod, który wprowadziłeś jest ważny tylko dla nowych klientów.",
+  "pci_projects_new_voucher_form_field_error_voucher_new_project": "Masz już utworzony projekt. Kod nie jest dostępny."
 }
