--- a/packages/manager/modules/pci/src/projects/project/ai-dashboard/tabs/registries/add/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/ai-dashboard/tabs/registries/add/translations/Messages_fr_FR.json
@@ -1,6 +1,6 @@
 {
   "pci_projects_project_ai_dashboard_registries_add_url": "URL du Docker Registry Privé",
-  "pci_projects_project_ai_dashboard_registries_add_success": "Le Docker Registry privé a correctement été ajouté au projet",
+  "pci_projects_project_ai_dashboard_registries_add_success": "Le Docker Registry Privé a correctement été ajouté au projet",
   "pci_projects_project_ai_dashboard_registries_add_error": "Une erreur est survenue durant l'association du Docker Registry Privé",
   "pci_projects_project_ai_dashboard_registries_add": "Ajouter un Docker Registry Privé",
   "pci_projects_project_ai_dashboard_registries_add_common_add": "Ajouter",
