--- a/packages/manager/modules/pci/src/projects/project/ai-dashboard/tabs/registries/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/ai-dashboard/tabs/registries/translations/Messages_fr_FR.json
@@ -1,7 +1,7 @@
 {
   "pci_ai_dashboard_registries_title": "Registres Docker",
   "pci_ai_dashboard_registries_description": "Un registre docker vous permet de stocker vos images logicielles afin de pouvoir facilement y accéder lors de vos entrainement ou déploiements.",
-  "pci_ai_dashboard_private_docker_registries_title": "Registres Docker privés",
+  "pci_ai_dashboard_private_docker_registries_title": "Registres Docker Privés",
   "pci_ai_dashboard_private_docker_registries_description_1": "Vous pouvez gérer ici vos Docker Registries privés. Vous pourrez ensuite facilement lancer des jobs et des apps avec ces images.",
   "pci_ai_dashboard_private_docker_registries_description_2": "Il vous est possible d’utiliser soit votre propre Docker Registry soit un Registre privé managé OVHcloud avec toutes les fonctionnalités du projet open source Harbor pour en garantir la sécurité. Ce service est disponible via le réseau haute performance d’OVH afin d’accélérer vos déploiements.",
   "pci_pai_dashboard_private_docker_registries_id": "ID",
